--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.4.4",
     "nuxt3": "latest",
     "postcss": "^8.4.12",
+    "stylelint-config-recommended": "^7.0.0",
     "tailwindcss": "^3.0.23"
   }
 }
